# Pokai

vgc-lab/: .gitignore  README.md  REPOSITORY_STRUCTURE.md  pyproject.toml
vgc-lab/checkpoints/: battle_bc.pt  preview_bring4.pt  team_value.pt
vgc-lab/docs/: architecture_team_vs_policy.md
vgc-lab/js/: import_to_packed.js  py_policy_selfplay.js  random_selfplay.js
vgc-lab/scripts/: __init__.py  analyze_meta_matchups.py  analyze_teams_vs_pool.py  auto_team_value_iter.py  cli.py  dump_battle_trajectories.py  dump_teams_vs_pool_features.py  evaluate_catalog_team.py  evaluate_catalog_team_vs_pool.py  evaluate_main_team_vs_random.py  evaluate_matchup.py  generate_full_battle_dataset.py  generate_preview_outcome_dataset.py  generate_team_matchup_dataset.py  generate_team_preview_dataset.py  model_guided_team_search.py  pack_team_cli.py  random_catalog_team_search.py  run_demo_battle.py  run_long_selfplay_loop.py  score_catalog_team_with_model.py  score_matchup_with_model.py  suggest_counter_teams.py  suggest_subteams_vs_opponent.py  teams_vs_pool_dataset.py  train_team_matchup_model.py  train_team_value_model.py  validate_team_cli.py
vgc-lab/tests/: __init__.py  test_battle_dqn_policy.py  test_choice_counting.py  test_cli_smoke.py  test_eval_battle_policies.py  test_eval_matchup.py  test_inspect_selfplay.py  test_invalid_choice_regressions.py  test_online_selfplay_dqn_router.py  test_online_selfplay_sanitizer.py  test_online_selfplay_smoke.py  test_rl_battle_dataset.py  test_sanitize_reason_filtering.py  test_sanitizer_mixed_force_switch.py  test_sanitizer_reasons.py  (+3 more)
(+84 files in other folders)
